KVH/mykvh/Email-to-anything/objects/Email_Service_Pattern_Rules__c.object
<CustomObject>
    <fields>
        <fullName>Apply_Empty_Result__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Apply rule even if regex match result is blank</inlineHelpText>
        <label>Apply Empty Result</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Destination_Field__c</fullName>
        <label>Destination Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_Value_Field__c</fullName>
        <label>Destination Value Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Upgraded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Upgraded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NewSearch_In__c</fullName>
        <label>Search In</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attachment</fullName>
                </value>
                <value>
                    <fullName>Subject</fullName>
                </value>
                <value>
                    <fullName>Body</fullName>
                </value>
                <value>
                    <fullName>Headers</fullName>
                </value>
                <value>
                    <fullName>To</fullName>
                </value>
                <value>
                    <fullName>From</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overwrite_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overwrite Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Id__c</fullName>
        <label>Email Services Function</label>
        <referenceTo>Email_Services_Function__c</referenceTo>
        <relationshipLabel>Email Service Pattern Rules</relationshipLabel>
        <relationshipName>Email_Service_Pattern_Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pattern__c</fullName>
        <label>Pattern</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Search_In__c</fullName>
        <label>Search In</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Subject</fullName>
                </value>
                <value>
                    <fullName>Header</fullName>
                </value>
                <value>
                    <fullName>Body</fullName>
                </value>
                <value>
                    <fullName>Subject &amp; Body</fullName>
                </value>
                <value>
                    <fullName>Subject &amp; Body &amp; Header</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Email Service Pattern Rule</label>
    <nameField>
        <label>Rule</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Service Pattern Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>